(hopefully) fixed the visible scroll bar on some pages

--- a/emfas-site/src/App.css
+++ b/emfas-site/src/App.css
@@ -4,7 +4,7 @@
   margin: 0;
   min-height: 100%;
   min-width:100%;
-  overflow: scroll;
+ 
 
 }
   
